--- a/css/style.css
+++ b/css/style.css
@@ -590,7 +590,7 @@ h1, h2, h3, h4, h5, h6, figure {
   margin-bottom: 20px;
   font-size: 16px;
   font-weight: normal;
-  color: #bfbfbf;
+  color: #2f2e2e;
 }
 
 .timeline-body > p,
